# OfferBuilder

./: .gitignore  Discovery.md  README  README.md  Spacefile
backend/: .flake8  README.md  mypy.ini  pyproject.toml  requirements.txt  setup.cfg
backend/app/: __init__.py  dependencies.py  exceptions.py  main.py
backend/app/api/: __init__.py  dependencies.py  exceptions.py
backend/app/api/dependencies/: __init__.py  agents.py  auth.py  companies.py  offer_tpls.py  offers.py  users.py  wastes.py  works.py
backend/app/api/exceptions/: __init__.py  agents.py  auth.py  companies.py  docx.py  offer_tpls.py  offers.py  users.py  wastes.py  works.py
backend/app/api/routes/: agents.py  auth.py  companies.py  offer_tpls.py  offers.py  users.py  wastes.py  works.py
backend/app/api/schemes/: __init__.py  agents.py  auth.py  companies.py  offer_tpls.py  offers.py  users.py  wastes.py  works.py
backend/app/core/: __init__.py  agents.py  auth.py  companies.py  config.py  deta.py  docx.py  models.py  offer_tpls.py  offers.py  pagination.py  security.py  users.py  wastes.py  works.py
backend/app/db/: __init__.py  company.py  offer.py  offer_tpl.py  user.py  waste.py  work.py
backend/app/models/: agent.py  company.py  offer.py  offer_tpl.py  user.py  waste.py  work.py
backend/scripts/: space-dev.bat  space-push.bat
frontend/: .eslintrc.cjs  .gitignore  README.md  package.json
frontend/src/: app.html
frontend/src/lib/: backend.js  backend.ts  cookies.js  cookies.ts  stores.ts  texts.ts
frontend/src/lib/backend/: base_api.ts  pagination.ts  utils.ts
frontend/src/lib/components/: PageWithNavbar.svelte
frontend/src/routes/: +layout.svelte  +page.server.js  +page.server.ts
frontend/src/routes/(authorized)/: +layout.svelte  (+4 more)
frontend/src/theme/: _smui-theme.scss
frontend/static/: smui.css
scripts/: backend-lint.bat  space-dev.bat  space-push.bat
(+67 files in other folders)
