[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["butvinm <butvin.mihail@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
odetam = "^1.5.1"
fastapi = "^0.99.1"
uvicorn = "^0.22.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
