[tool.poetry]
name = "backend"
version = "0.2.0"
description = ""
authors = ["butvinm <butvin.mihail@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
odetam = "^1.5.1"
fastapi = "^0.99.1"
uvicorn = "^0.22.0"
python-jose = "^3.3.0"
types-python-jose = "^3.3.4.7"
types-passlib = "^1.7.7.12"
passlib = {extras = ["brypt"], version = "^1.7.4"}
bcrypt = "^4.0.1"
python-multipart = "^0.0.6"
docxtpl = "^0.16.7"
requests = "^2.31.0"


[tool.poetry.group.dev.dependencies]
types-requests = "^2.31.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
